# igo-delivery

./: .env.deploy  .env.example  DeliverProject.py  DeliveryConstants.py  DeliveryHelpers.py  DeliveryInfos.py  EmailDelivered.py  EmailLogic.py  LinkDLPProjectToSamples.py  LinkProjectToSamples.py  LinkSpecialProjectToSamples.py  Notifier.py  README.md  compare_fastq_formats.py  pyproject.toml  requirements.txt  run_tracker.py  setaccess.py  setup.py  splunk_log.py  splunk_logging.py  testEmailDelivered.py  testLinkProjectToSamples.py  test_setaccess.py  weeklyidcheck.py
archiving/: fastq-md5-hash-a.sh  fastq-md5-hash-b.sh  fastq-rsync-igo.sh  fastq-rsync-nanopore.sh  fastq_rsync_iris.sh  instrument-rsync.sh  oraCompressFastq.sh  rsync_promethion.sh
