[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igo-splunk-logging"
version = "1.0.0"
description = "Shared Splunk HEC logging utility for IGO Python scripts"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "splunk_handler>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests",
]

[project.optional-dependencies]
dev = ["pytest"]
